# sparkle

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/: Helpers.cmake
src/: CMakeLists.txt  _sprite.h  app.cc  app.h  arcball_camera.h  events.cc  events.h  glfw.h  linmath.h  main.cc  opengl.cc  opengl.h  scene.cc  scene.h  ui.cc  ui.h
src/api/: append_consume_buffer.cc  append_consume_buffer.h  gpu_particle.cc  gpu_particle.h  random_buffer.cc  random_buffer.h  vector_field.cc  vector_field.h
src/shaders/basic/: fs_basic.glsl  vs_basic.glsl
src/shaders/grid/: fs_grid.glsl  vs_grid.glsl
src/shaders/sparkle/: cs_calculate_dp.glsl  cs_emission.glsl  cs_fill_indices.glsl  cs_simulation.glsl  cs_sort_final.glsl  cs_sort_step.glsl  cs_update_args.glsl  fs_point_sprite.glsl  fs_stretched_sprite.glsl  gs_stretched_sprite.glsl  inc_curlnoise.glsl  inc_distance_func.glsl  inc_distance_utils.glsl  inc_math.glsl  inc_perlin.glsl  inc_perlin_2d.glsl  inc_perlin_3d.glsl  inc_rendering_shared.glsl  interop.h  vs_generic.glsl
src/ui/: controller.cc  controller.h  view.h
src/ui/views/: Debug.cc  Debug.h  Main.cc  Main.h  Rendering.cc  Rendering.h  Simulation.cc  Simulation.h  views.h
tools/glextgen/: extensions  main.py
